//
// Copyright 2025 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "buf/validate/validate.proto";
import "controlplane/v1/response_messages.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service ProjectService {
  // Project level API tokens
  rpc APITokenCreate(ProjectServiceAPITokenCreateRequest) returns (ProjectServiceAPITokenCreateResponse);
  rpc APITokenList(ProjectServiceAPITokenListRequest) returns (ProjectServiceAPITokenListResponse);
  rpc APITokenRevoke(ProjectServiceAPITokenRevokeRequest) returns (ProjectServiceAPITokenRevokeResponse);
}

message ProjectServiceAPITokenCreateRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string project_name = 2 [(buf.validate.field).string.min_len = 1];
  optional string description = 3;
  optional google.protobuf.Duration expires_in = 4;
}

message ProjectServiceAPITokenCreateResponse {
  APITokenFull result = 1;

  message APITokenFull {
    APITokenItem item = 1;
    string jwt = 2;
  }
}

message ProjectServiceAPITokenRevokeRequest {
  // token name
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string project_name = 2 [(buf.validate.field).string.min_len = 1];
}

message ProjectServiceAPITokenRevokeResponse {}

message ProjectServiceAPITokenListRequest {
  string project_name = 1 [(buf.validate.field).string.min_len = 1];
  bool include_revoked = 2;
}

message ProjectServiceAPITokenListResponse {
  repeated APITokenItem result = 1;
}
